--- a/createevent.ui
+++ b/createevent.ui
@@ -7,17 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>261</height>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Personal Event</string>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>200</y>
+     <y>190</y>
      <width>361</width>
      <height>51</height>
     </rect>
@@ -32,7 +32,7 @@
      <x>10</x>
      <y>10</y>
      <width>361</width>
-     <height>138</height>
+     <height>172</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
@@ -64,7 +64,7 @@
       </property>
      </widget>
     </item>
-	<item row="2" column="0">
+    <item row="2" column="0">
      <widget class="QLabel" name="date_label">
       <property name="text">
        <string>Date:</string>
@@ -81,31 +81,22 @@
      <widget class="QLineEdit" name="location_input_2"/>
     </item>
     <item row="3" column="1">
-      <widget class="QTimeEdit" name="begin_time_edit_2"/>
+     <widget class="QTimeEdit" name="begin_time_edit_2"/>
     </item>
-	<item row="2" column="1">
-	  <widget class="QDateEdit" name="dateEdit">
-		<property name="geometry">
-		  <rect>
-			<x>10</x>
-			<y>170</y>
-			<width>110</width>
-			<height>22</height>
-		  </rect>
-		</property>
-		<property name="date">
-		  <date>
-			<year>2016</year>
-			<month>11</month>
-			<day>11</day>
-		  </date>
-		</property>
-	  </widget>
-	</item>
+    <item row="2" column="1">
+     <widget class="QDateEdit" name="dateEdit">
+      <property name="date">
+       <date>
+        <year>2016</year>
+        <month>11</month>
+        <day>11</day>
+       </date>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
