--- a/friend_requests.ui
+++ b/friend_requests.ui
@@ -16,14 +16,14 @@
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>90</x>
      <y>10</y>
-     <width>81</width>
+     <width>91</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>MY FRIENDS</string>
+    <string>MY REQUESTS</string>
    </property>
   </widget>
   <widget class="QPushButton" name="back_button">
@@ -39,20 +39,20 @@
     <string>Back</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="delete_friend">
+  <widget class="QPushButton" name="decline">
    <property name="geometry">
     <rect>
      <x>100</x>
      <y>230</y>
      <width>61</width>
-     <height>30</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Delete</string>
+    <string>Decline</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="requests">
+  <widget class="QPushButton" name="accept">
    <property name="geometry">
     <rect>
      <x>170</x>
@@ -62,7 +62,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Requests</string>
+    <string>Accept</string>
    </property>
   </widget>
   <widget class="QListWidget" name="list_friends">
@@ -71,31 +71,8 @@
      <x>10</x>
      <y>30</y>
      <width>241</width>
-     <height>151</height>
+     <height>191</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="username_input">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>190</y>
-     <width>211</width>
-     <height>30</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="add_friend">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>190</y>
-     <width>31</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>+</string>
    </property>
   </widget>
  </widget>
