--- a/account_settings.ui
+++ b/account_settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>339</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
       </property>
      </widget>
     </item>
-	<item row="1" column="0">
+    <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>New Username:</string>
@@ -68,7 +68,7 @@
     <item row="0" column="1">
      <widget class="QLineEdit" name="username_input"/>
     </item>
-	<item row="1" column="1">
+    <item row="1" column="1">
      <widget class="QLineEdit" name="new_username_input"/>
     </item>
     <item row="2" column="1">
@@ -88,10 +88,10 @@
   <widget class="QPushButton" name="save_changes">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>280</y>
-     <width>121</width>
-     <height>41</height>
+     <x>10</x>
+     <y>240</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -101,14 +101,53 @@
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>10</x>
      <y>280</y>
-     <width>131</width>
-     <height>41</height>
+     <width>361</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="leave_of_absence">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>240</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Leave of Absence</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="present">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>240</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Present</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>220</y>
+     <width>361</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
