--- a/create_group_event.ui
+++ b/create_group_event.ui
@@ -78,9 +78,9 @@
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>250</x>
      <y>360</y>
-     <width>113</width>
+     <width>121</width>
      <height>32</height>
     </rect>
    </property>
@@ -91,9 +91,9 @@
   <widget class="QPushButton" name="create_event">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>10</x>
      <y>360</y>
-     <width>113</width>
+     <width>121</width>
      <height>32</height>
     </rect>
    </property>
@@ -120,7 +120,7 @@
      <x>260</x>
      <y>190</y>
      <width>113</width>
-     <height>32</height>
+     <height>30</height>
     </rect>
    </property>
    <property name="text">
@@ -158,6 +158,19 @@
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="get_a_time">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>360</y>
+     <width>121</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Get a Time</string>
    </property>
   </widget>
  </widget>
