--- a/account_settings.ui
+++ b/account_settings.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Account Settings</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(76, 76, 76);</string>
+  </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
@@ -25,6 +28,10 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="label">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(248, 253, 253);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Username:</string>
       </property>
@@ -32,6 +39,10 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>New Username:</string>
       </property>
@@ -39,6 +50,10 @@
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(250, 253, 253);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Email:</string>
       </property>
@@ -46,6 +61,10 @@
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_4">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Old Password:</string>
       </property>
@@ -53,6 +72,10 @@
     </item>
     <item row="5" column="0">
      <widget class="QLabel" name="label_4">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>New Password:</string>
       </property>
@@ -60,28 +83,60 @@
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_3">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Phone Number:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="username_input"/>
+     <widget class="QLineEdit" name="username_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt &quot;Cambria&quot;;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="new_username_input"/>
+     <widget class="QLineEdit" name="new_username_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="email_input"/>
+     <widget class="QLineEdit" name="email_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QLineEdit" name="phone_input"/>
+     <widget class="QLineEdit" name="phone_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="4" column="1">
-     <widget class="QLineEdit" name="old_password_input"/>
+     <widget class="QLineEdit" name="old_password_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QLineEdit" name="new_password_input"/>
+     <widget class="QLineEdit" name="new_password_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -93,6 +148,11 @@
      <width>111</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(86, 231, 115);
+color: rgb(255, 255, 255);
+font: 75 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -107,6 +167,11 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 128);
+color: rgb(255, 255, 255);
+font: 75 13pt &quot;Courier&quot;;</string>
+   </property>
    <property name="text">
     <string>Cancel</string>
    </property>
@@ -120,6 +185,12 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(61, 229, 229);
+
+color: rgb(255, 255, 255);
+font: 75 13pt &quot;Courier&quot;;</string>
+   </property>
    <property name="text">
     <string>Group Absence</string>
    </property>
@@ -132,6 +203,11 @@
      <width>111</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(227, 201, 69);
+color: rgb(255, 255, 255);
+font: 75 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Present</string>
