--- a/createevent.ui
+++ b/createevent.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>createevent</class>
- <widget class="QDialog" name="createevent">
+ <widget class="QWidget" name="createevent">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -85,13 +85,6 @@
     </item>
     <item row="2" column="1">
      <widget class="QDateEdit" name="dateEdit">
-      <property name="date">
-       <date>
-        <year>2016</year>
-        <month>11</month>
-        <day>11</day>
-       </date>
-      </property>
      </widget>
     </item>
     <item row="5" column="0">
